- Add repository pattern - Add toolbar extension for UITextView UITextField

--- a/DGPPrivateData.xcodeproj/xcshareddata/xcschemes/DGPPrivateData.xcscheme
+++ b/DGPPrivateData.xcodeproj/xcshareddata/xcschemes/DGPPrivateData.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C794C9A42659724500E6AC1F"
+               BuildableName = "DGPPrivateDataTests.xctest"
+               BlueprintName = "DGPPrivateDataTests"
+               ReferencedContainer = "container:DGPPrivateData.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
